# fontconfig

./: dirent.h.in  meson.build  unistd.h.in
conf.d/: link_confs.py  meson.build
fc-cache/: meson.build
fc-case/: meson.build
fc-cat/: meson.build
fc-conflist/: meson.build
fc-lang/: meson.build
fc-list/: meson.build
fc-match/: meson.build
fc-pattern/: meson.build
fc-query/: meson.build
fc-scan/: meson.build
fc-validate/: meson.build
src/: cutout.py  dirent.c  fccache.c  fccfg.c  fontconfig.def  makealias.py  meson.build
subprojects/: .gitignore
test/: meson.build
